# project2_ryzhova_dpo_nod

./: .gitignore  Makefile  README.md  pyproject.toml
src/: decorators.py
src/primitive_db/: core.py  engine.py  main.py  parser.py  utils.py
