[tool.poetry]
name = "project2-ryzhova-dpo-nod"
version = "0.1.0"
description = ""
authors = ["yozhik94 <ryzhova.ms@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
